# proof-of-work

./: LICENSE  README.md  package.yaml  proof-of-work.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
