name:           proof-of-work
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/StavrosChryselis/proof-of-work#readme>
homepage:       https://github.com/StavrosChryselis/proof-of-work#readme
bug-reports:    https://github.com/StavrosChryselis/proof-of-work/issues
author:         Stavros Chryselis
maintainer:     stavrikios@gmail.com
copyright:      2018 Stavros Chryselis
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/StavrosChryselis/proof-of-work

library
  exposed-modules:
      Lib
  other-modules:
      Paths_proof_of_work
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cryptonite
    , memory
    , crypto-api
  default-language: Haskell2010

executable proof-of-work-exe
  main-is: Main.hs
  other-modules:
      Paths_proof_of_work
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , proof-of-work
    , bytestring
    , text
    , microtimer
    , base16-bytestring
  default-language: Haskell2010

test-suite proof-of-work-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_proof_of_work
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , proof-of-work
  default-language: Haskell2010
